--- a/sprint-1/styles/main.scss
+++ b/sprint-1/styles/main.scss
@@ -6,6 +6,7 @@
 @import './partials/colours'; 
 @import './partials/header'; 
 @import './partials/hero'; 
+@import './partials/bio'; 
 
 html, 
 body {
