--- a/sprint-1/styles/partials/_header.scss
+++ b/sprint-1/styles/partials/_header.scss
@@ -35,7 +35,7 @@
 @include medium {
     .header { 
         &__wrapper {
-            margin: 0 24px;  
+            margin: 0 3.13%;  
             height: inherit; 
             display: flex; 
             align-items: center; 
@@ -46,7 +46,7 @@
         }
 
         &__nav-link {
-            margin-left: 56px;
+            margin-left: 7.29%;
             width: 80px; 
         }
     }
@@ -55,7 +55,7 @@
 @include large {
     .header {
         &__wrapper {
-            margin: 0 180px; 
+            margin: 0 12.5%; 
             height: inherit; 
             display: flex; 
             align-items: center; 
@@ -66,7 +66,7 @@
         }
 
         &__nav-link {
-            margin-left: 56px; 
+            margin-left: 3.89%; 
             width: 80px; 
         }
     }
