--- a/sprint-1/styles/main.css
+++ b/sprint-1/styles/main.css
@@ -1,3 +1,21 @@
+html,
+body {
+  margin: 0;
+  font-family: AvenirReg, sans-serif;
+  color: #323232;
+  height: 100vh;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+/* Enforces border-box for whole site */
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
 /* Imports */
 /* Media Query: Tablet */
 /* Media Query: Desktop */
@@ -234,7 +252,7 @@
     margin: 48px 0 40px 0;
   }
   .bio__sub-header {
-    margin: 56px 0 32px 0;
+    margin: 40px 0 32px 0;
   }
   .bio__paragraph-wrapper {
     display: -webkit-box;
@@ -251,21 +269,50 @@
   }
 }
 
-html,
-body {
-  margin: 0;
-  font-family: AvenirReg, sans-serif;
-  color: #323232;
-  height: 100vh;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-/* Enforces border-box for whole site */
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+@media only screen and (min-width: 1440px) {
+  .bio__header-wrapper {
+    margin: 0 12.5%;
+  }
+  .bio__article-wrapper {
+    margin: 0 18.89% 48px 18.89%;
+  }
+  .bio__header {
+    font-size: 36px;
+    line-height: 44px;
+    margin: 48px 0;
+  }
+  .bio__band-img {
+    width: 62.22%;
+    min-height: 450px;
+  }
+  .bio__quote, .bio__sub-header {
+    font-family: "AvenirBold";
+    font-size: 24px;
+    line-height: 32px;
+  }
+  .bio__quote-speaker {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .bio__quote {
+    margin: 48px 0 40px 0;
+  }
+  .bio__sub-header {
+    margin: 56px 0 32px 0;
+  }
+  .bio__paragraph-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .bio__text {
+    font-size: 14px;
+    line-height: 22px;
+    min-width: 420px;
+  }
+  .bio__text:last-of-type {
+    margin-left: 40px;
+    margin-bottom: 48px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
