--- a/sprint-1/styles/main.css
+++ b/sprint-1/styles/main.css
@@ -318,7 +318,7 @@ body {
 
 .gallery {
   background-color: #fafafa;
-  padding: 32px 0;
+  padding: 32px 0 32px 2%;
 }
 
 .gallery__wrapper {
@@ -333,6 +333,7 @@ body {
 }
 
 .gallery__photo-wrapper {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -353,8 +354,8 @@ body {
 
 @media only screen and (min-width: 768px) {
   .gallery {
-    padding-top: 48px;
-    padding-bottom: 40px;
+    width: 100%;
+    padding: 48px 2% 40px 0;
   }
   .gallery__wrapper {
     margin: 0 3.13%;
@@ -369,21 +370,21 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-flow: row wrap;
             flex-flow: row wrap;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
   .gallery__photo {
     min-height: 162px;
-    width: calc(100% / 3 - 12px);
+    width: 31%;
     margin-bottom: 24px;
   }
 }
 
 @media only screen and (min-width: 1440px) {
   .gallery {
-    padding-top: 48px;
-    padding-bottom: 40px;
+    width: 100%;
+    padding: 48px 0 40px 2%;
   }
   .gallery__wrapper {
     margin: 0 12.5%;
@@ -398,13 +399,13 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-flow: row wrap;
             flex-flow: row wrap;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
   .gallery__photo {
     min-height: 193px;
-    width: calc(100% / 3 - 12px);
+    width: 31%;
     margin-bottom: 24px;
   }
 }
