--- a/sprint-1/styles/partials/_gallery.scss
+++ b/sprint-1/styles/partials/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
     background-color: $alabaster; 
-    padding: 32px 0; 
+    padding: 32px 0 32px 2%;
 
     &__wrapper {
         margin: 0 5%; 
@@ -15,6 +15,7 @@
     } 
 
     &__photo-wrapper {
+        width: 100%; 
         display: flex;
         flex-direction: column;
         align-items: center; 
@@ -29,8 +30,8 @@
 
 @include medium {
     .gallery {
-        padding-top: 48px; 
-        padding-bottom: 40px; 
+        width:100%;
+        padding: 48px 2% 40px 0;
 
         &__wrapper {
             margin: 0 3.13%; 
@@ -45,12 +46,12 @@
 
         &__photo-wrapper {
             flex-flow: row wrap; 
-            justify-content: space-between;
+            justify-content: space-evenly;
         }
 
         &__photo {
             min-height: 162px; 
-            width: calc(100% / 3 - 12px); 
+            width: 31%; 
             margin-bottom: 24px; 
         }
     }
@@ -58,8 +59,8 @@
 
 @include large {
     .gallery {
-        padding-top: 48px; 
-        padding-bottom: 40px; 
+        width:100%;
+        padding: 48px 0 40px 2%;
 
         &__wrapper {
             margin: 0 12.5%; 
@@ -74,12 +75,12 @@
 
         &__photo-wrapper {
             flex-flow: row wrap; 
-            justify-content: space-between;
+            justify-content: space-evenly;
         }
 
         &__photo {
             min-height: 193px; 
-            width: calc(100% / 3 - 12px); 
+            width: 31%; 
             margin-bottom: 24px; 
         }
     }
