--- a/sprint-1/styles/partials/_gallery.scss
+++ b/sprint-1/styles/partials/_gallery.scss
@@ -26,6 +26,14 @@
         min-height: 126px; 
         width: 100%
     }
+
+    &__grayscale {
+        filter: grayscale(100%);
+    }
+
+    &__grayscale:hover {
+        filter: grayscale(0%);
+    }
 }
 
 @include medium {
