--- a/sprint-1/styles/partials/_footer.scss
+++ b/sprint-1/styles/partials/_footer.scss
@@ -47,8 +47,7 @@
 
     &__contact,
     &__contact-title,
-    &__contact-info, 
-    &__email {
+    &__contact-info {
         margin-bottom: 16px;
         width: 100%;  
     }
@@ -57,6 +56,15 @@
         font-family: "AvenirDemiBold";
         font-size: 14px; 
         line-height: 22px;
+    }
+
+    &__email {
+        text-decoration: none;
+        color: $white; 
+    }
+
+    &__email:hover {
+        color: $silver;
     }
 
     &__contact-info, 
