--- a/sprint-2/styles/main.scss
+++ b/sprint-2/styles/main.scss
@@ -23,5 +23,6 @@ body {
 @import './partials/header'; 
 @import './partials/hero'; 
 @import './partials/bio'; 
-@import './partials/gallery'; 
+@import './partials/gallery';
+@import './partials/shows';  
 @import './partials/footer'; 
