--- a/sprint-2/styles/partials/_shows.scss
+++ b/sprint-2/styles/partials/_shows.scss
@@ -7,10 +7,20 @@
         font-family: 'AvenirBold';
         font-size: 24px;
         line-height: 32px;
+        margin: 32px 0 16px 0; 
     }
 
     &__table {
         width: 100%;
+        text-align: left;
+        &--mobile {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    &__table-show {
+        border-bottom: 1px solid $mercury;
     }
 
     &__table-header {
@@ -19,15 +29,40 @@
         line-height: 20px;
     }
 
+    &__table-header:first-child {
+        margin-top: 24px; 
+    }
+
     &__table-content {
         font-size: 13px;
         line-height: 18px;
+    }
+
+    &__table-content:not(:last-child) {
+        margin: 16px 0 24px 0; 
+    }
+
+    &__table-content:nth-child(2) {
+        font-family: 'AvenirDemiBold';
     }
 
     &__table-content--date {
         font-family: 'AvenirDemiBold';
         font-size: 14px; 
         line-height: 22px;
+    }
+
+    &__cta {
+        width: 100%; 
+        height: 48px; 
+        margin-bottom: 16px;
+        background-color: $black;
+        border-style: none;
+        border-radius: 4px;
+        color: $white;
+        &:hover {
+            background-color: $brainflix-blue;
+        }
     }
 }
 
@@ -42,19 +77,28 @@
             line-height: 44px;
         }
 
-        &__table {
-            width: 74.44%; 
-            align-self: left;
-        }
-
         &__table-content {
             font-size: 14px;
             line-height: 20px;
+            padding: 40px 0; 
+            border-bottom: $mercury 1px solid;
+        }
+
+        &__table-content:nth-child(1) {
+            font-family: 'AvenirDemiBold';
+        }
+
+        &__table-content:nth-child(2) {
+            font-family: 'AvenirReg';
         }
 
         &__table-content--date {
             font-size: 16px;
             line-height: 24px;
+        }
+
+        &__cta {
+            margin: 0; 
         }
     }
 }
@@ -64,7 +108,16 @@
         &__wrapper {
             margin: 48px 12.5%; 
             display: flex;
-            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        &__table {
+            width: 74.44%; 
+            margin-top: 32px;
+        }
+
+        &__cta {
+            width: 100%; 
         }
     }
 }
