--- a/sprint-2/styles/partials/_hero.scss
+++ b/sprint-2/styles/partials/_hero.scss
@@ -24,11 +24,27 @@
         background-blend-mode: darken;
     }
 
+    &__text-wrapper {
+        margin: 64px 0; 
+    }
+
     &__text {
         font-family: "AvenirBold"; 
         font-size: 24px; 
         line-height: 32px; 
         color: $white; 
+        &--splash {
+            font-family: "AvenirBold";
+            font-size: 14px; 
+            line-height: 22px;
+            color: $white;
+        }
+    }
+
+    &__soundcloud-media {
+        width: 100%; 
+        height: 100px; 
+        margin-bottom: 64px;
     }
 }
 
@@ -40,12 +56,23 @@
             margin: 0 3.13%; 
         }
 
+        &__text-wrapper {
+            margin: 96px 0; 
+        }
+
         &__text {
             font-size: 60px; 
             line-height: 68px;
-            &--shows {
-                max-width: 50%; 
+            &--splash {
+                font-size: 24px;
+                line-height: 24px;
             }
+        }
+
+        &__soundcloud-media {
+            width: 55%; 
+            height: 146px; 
+            margin-bottom: 96px; 
         }
     }
 }
@@ -56,10 +83,20 @@
 
         &__wrapper {
             margin: 0 12.5%; 
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
-        &__text {
+        &__text-wrapper {
+            margin: 160px 0; 
             max-width: 60%;
+        }
+
+        &__soundcloud-media {
+            width: 40.37%; 
+            margin-left: 5.93%; 
+            margin-bottom: 0;
         }
     }
 }
