--- a/sprint-2/styles/main.scss
+++ b/sprint-2/styles/main.scss
@@ -24,5 +24,6 @@ body {
 @import './partials/hero'; 
 @import './partials/bio'; 
 @import './partials/gallery';
+@import './partials/conversation'; 
 @import './partials/shows';  
 @import './partials/footer'; 
