--- a/sprint-2/styles/main.css
+++ b/sprint-2/styles/main.css
@@ -460,14 +460,16 @@ body {
 
 .conversation__avatar-wrapper {
   margin-right: 20px;
-  width: 45px;
-  height: 45px;
+  width: 48px;
+  height: 48px;
   position: relative;
   overflow: hidden;
   border-radius: 50%;
 }
 
 .conversation__avatar {
+  -o-object-fit: cover;
+     object-fit: cover;
   width: inherit;
   height: inherit;
 }
